--- a/HOME.html
+++ b/HOME.html
@@ -39,9 +39,9 @@
          *   - 모바일/태블릿: width: 100%로 전환
          *
          * - HOME GPT의 .sidebar 전략:
-         *   - 외곽 padding을 0으로 두고, 전체 컨테이너 폭을 340px로 고정
-         *     → 300x600 / 300x250 소재를 여유 있게 수용(좌우 잘림 방지)
-         *   - 데스크탑(≥1025px): flex: 0 0 340px; min-width: 340px
+         *   - 외곽 padding을 0으로 두고, 전체 컨테이너 폭을 300px로 고정
+         *     → 300x600 / 300x250 소재를 정확히 수용(좌우 잘림 방지)
+         *   - 데스크탑(≥1025px): flex: 0 0 300px; min-width: 300px
          *   - 모바일/태블릿(≤1024px): width: 100%; flex: 1 1 auto; min-width: 0;
          *
          * - 결과:
@@ -57,11 +57,11 @@
             /* 
              * [사이드바 공통 스타일]
              * - 광고 수익 테스트를 위해 외곽 padding을 0으로 설정
-             * - 우측 레일 전체 폭(340px) 안에서 광고/콘텐츠를 최대한 넓게 쓰기 위함
+             * - 우측 레일 전체 폭(300px) 안에서 광고/콘텐츠를 최대한 넓게 쓰기 위함
              * - 텍스트/콘텐츠 여백이 필요하면 .sidebar-item 등 내부 요소에서 padding을 부여
              */
             background-color: #fff;
-            padding: 0;                 /* 🔧 기존 20px → 0으로 변경 */
+            padding: 0;                 /* 외곽 컨테이너 padding 0 유지 */
             box-sizing: border-box;
             border-radius: 5px;
         }
@@ -212,13 +212,13 @@
 
         /* ------------------------------
            데스크탑 레이아웃 (>= 1025px)
-           - 우측 사이드바 340px 컨테이너 폭 확보
+           - 우측 사이드바 300px 컨테이너 폭 확보
            - 300x600/300x250 등 세로형 광고를 수용하기에 충분한 폭 보장
         ------------------------------ */
         @media (min-width: 1025px) {
             .sidebar {
-                flex: 0 0 340px;   /* 전체 폭 340px (외곽 padding 0 기준) */
-                min-width: 340px;  /* 최소 폭 보장 */
+                flex: 0 0 300px;   /* 전체 폭 300px (외곽 padding 0 기준) */
+                min-width: 300px;  /* 최소 폭 보장 */
             }
         }
 
