--- a/HOME.html
+++ b/HOME.html
@@ -306,9 +306,23 @@
         //   - event.isEmpty === false 일 때만 라벨 삽입 → 빈 슬롯에는 라벨이 붙지 않음
         //   - .ad-slot 래퍼 안에 .mk-ad-label을 prepend 형태로 삽입
         //   - 동일 슬롯에 중복 라벨이 생성되지 않도록 방지 로직 포함
+        //
+        // - 예외 처리 (HOME):
+        //   · TC_billboard_leaderboard
+        //     - 홈 상단 핵심 영역으로, 디자인/브랜딩 상 별도 'Advertisement' 라벨 없이
+        //       페이지 구조 및 크리에이티브 레벨에서 광고임을 인지하도록 설계합니다.
+        //     - View GPT의 BC_native_list_* 슬롯과 동일한 컨셉의 예외 슬롯으로 취급합니다.
         // ***************************************************
         function addAdLabel(event) {
             const slotId = event.slot.getSlotElementId();
+
+            // 💡 [예외] 홈 상단 'TC_billboard_leaderboard' 슬롯에는 라벨을 붙이지 않음
+            //   - 향후 Section/List GPT에서도 동일한 패턴(상단 TC 계열 슬롯 예외)을
+            //     적용할 수 있도록, 예외 처리 로직을 ID 기반으로 분리했습니다.
+            if (slotId === 'TC_billboard_leaderboard') {
+                return;
+            }
+
             const slotElement = document.getElementById(slotId); 
             
             if (event.isEmpty === false && slotElement) {
