--- a/HOME.html
+++ b/HOME.html
@@ -191,43 +191,90 @@
          * [HOME 전용 · 광고 닫기 버튼(.mk-ad-close-button) 설명]
          *
          * - TC_billboard_leaderboard와 같이 페이지 상단 핵심 인벤토리에서
-         *   사용자가 직접 광고를 접을 수 있도록 제공하는 "닫기 X" 버튼입니다.
+         *   사용자가 직접 광고를 접을 수 있도록 제공하는 "닫기 ✕" 버튼입니다.
          *
-         * - 주요 동작:
-         *   1) 광고가 실제로 로드된 경우(slotRenderEnded + event.isEmpty === false)에만
-         *      자바스크립트에서 동적으로 생성됩니다.
-         *   2) 버튼 클릭 시 해당 광고 슬롯(.ad-slot) 컨테이너를 display:none 처리하여
-         *      레이아웃 상에서 완전히 0px 높이로 접습니다.
-         *   3) 페이지 새로고침/재접속 시에는 다시 광고가 로드되며,
-         *      slotRenderEnded 이벤트에 의해 새 버튼이 다시 생성됩니다.
+         * - 이 스타일은 Jaeyeon이 정의한 Design Token을 반영합니다.
          *
-         * - 위치/디자인:
-         *   - .ad-slot를 기준으로 우측 상단(absolute top/right)에 위치하며,
-         *     상하좌우 20px의 padding을 주어 충분한 클릭 영역을 확보합니다.
-         *   - 높이(height) 20px, line-height 20px로 텍스트 라인을 고정합니다.
+         *   1) Layout & Position
+         *      - 배너(= .ad-slot)를 기준으로 우측 상단 절대 위치 (top: 10px, right: 10px)
+         *      - 텍스트 정렬을 위해 inline-flex + align-items/justify-content 사용
+         *
+         *   2) Typography
+         *      - 텍스트: "닫기 ✕"
+         *      - font-size: 14px (모바일 터치 및 가독성 고려)
+         *      - font-weight: 500 (Regular~Medium 느낌)
+         *      - letter-spacing: -0.3px (단단하고 조밀한 느낌)
+         *
+         *   3) Shape & Border
+         *      - border-radius: 99px → 완전한 Pill(알약) 형태
+         *      - padding: 5px 12px → 14px 폰트 기준으로 균형 잡힌 여백
+         *      - border: 1px solid rgba(255,255,255,0.8)
+         *        → 과하지 않은 은은한 흰색 테두리
+         *
+         *   4) Color & Visibility
+         *      - background: rgba(0,0,0,0.15) (거의 투명한 어두운 배경)
+         *      - color: #FFFFFF
+         *      - text-shadow + box-shadow 를 강하게 적용하여
+         *        흰색/밝은 계열 이미지 위에서도 버튼 윤곽과 텍스트가 절대 묻히지 않도록 설계
+         *        (유튜브/인스타 오버레이 버튼과 유사한 전략)
+         *
+         *   5) Interaction
+         *      - :hover 시 background를 rgba(0,0,0,0.3) 정도로 살짝 어둡게
+         *      - box-shadow를 조금 더 진하게, transform으로 1px 정도 위로 띄워 클릭감을 강화
          *
          * - 주의사항:
-         *   - 실제 광고 iframe 위에 오버레이되는 형태이므로 z-index를 120으로 두어
-         *     mk-ad-label(100)보다 위에 위치시켰습니다.
-         *   - 현재 HOME GPT에서는 TC_billboard_leaderboard에만 사용되지만,
-         *     추후 Section/List GPT 상단 TC 슬롯에도 재사용 가능하도록
-         *     공통 클래스명(.mk-ad-close-button)으로 정의했습니다.
+         *   - z-index를 120으로 설정하여 mk-ad-label(100)보다 항상 위에 위치시킵니다.
+         *   - HOME에서는 현재 TC_billboard_leaderboard에서만 사용하지만,
+         *     Section/List 상단 TC 계열 슬롯에도 동일하게 재사용 가능합니다.
          */
         .mk-ad-close-button {
             position: absolute;
-            top: 0;
-            right: 0;
-            padding: 20px;            /* 상하좌우 20px 패딩 */
-            height: 20px;             /* 텍스트 라인 높이 */
-            line-height: 20px;
-            font-size: 13px;
-            font-weight: normal;
-            background: transparent;
-            border: none;
+            top: 10px;                 /* Design Token: top 10px */
+            right: 10px;               /* Design Token: right 10px */
+
+            display: inline-flex;      /* 텍스트 정렬용 */
+            align-items: center;
+            justify-content: center;
+
+            padding: 5px 12px;         /* 상하 5px, 좌우 12px */
+            border-radius: 99px;       /* 완전한 Pill Shape */
+            border: 1px solid rgba(255, 255, 255, 0.8);
+
+            background: rgba(0, 0, 0, 0.15); /* 거의 투명한 어두운 배경 */
+            color: #ffffff;
+            font-size: 14px;           /* Design Token: 14px */
+            font-weight: 500;          /* Regular~Medium */
+            letter-spacing: -0.3px;
+            line-height: 1.3;
+
             cursor: pointer;
-            z-index: 120;             /* mk-ad-label(100)보다 위 */
-            color: #666;
             white-space: nowrap;
+
+            /* 가시성 확보용 그림자 (밝은/어두운 배경 모두 대비 확보) */
+            text-shadow:
+                0 0 2px rgba(0, 0, 0, 0.85),
+                0 0 4px rgba(0, 0, 0, 0.8),
+                0 0 6px rgba(0, 0, 0, 0.7);
+
+            box-shadow:
+                0 0 4px rgba(0, 0, 0, 0.65),
+                0 0 8px rgba(0, 0, 0, 0.55);
+
+            /* Hover 시 부드러운 변화 */
+            transition:
+                background-color 0.15s ease-out,
+                box-shadow 0.15s ease-out,
+                transform 0.1s ease-out;
+
+            z-index: 120;              /* mk-ad-label(100)보다 위에 노출 */
+        }
+
+        .mk-ad-close-button:hover {
+            background: rgba(0, 0, 0, 0.3);  /* Hover: 배경 살짝 어둡게 */
+            box-shadow:
+                0 0 6px rgba(0, 0, 0, 0.75),
+                0 0 10px rgba(0, 0, 0, 0.7);
+            transform: translateY(-1px);     /* 살짝 위로 떠오르는 느낌 */
         }
         
         @media (prefers-color-scheme: dark) {
@@ -254,11 +301,16 @@
 
             /*
              * [Dark Mode · mk-ad-close-button]
-             * - 다크 모드에서도 닫기 버튼이 과도하게 튀지 않으면서도
-             *   충분한 대비를 확보하도록 색상만 조정합니다.
+             * - 다크 모드에서도 지나치게 떠 보이지 않도록
+             *   border / background 농도만 살짝 조정합니다.
+             * - 기본 전략(흰색 텍스트 + 어두운 그림자)은 동일하게 유지합니다.
              */
             .mk-ad-close-button {
-                color: #bbbbbb;
+                background: rgba(0, 0, 0, 0.2);
+                border-color: rgba(255, 255, 255, 0.75);
+            }
+            .mk-ad-close-button:hover {
+                background: rgba(0, 0, 0, 0.4);
             }
         }
 
@@ -348,7 +400,7 @@
         let MR_halfpage_rectangle_slot    = null;
 
         // ***************************************************
-        // ✅ 공통 헬퍼: 지정 슬롯에 '닫기 X' 버튼을 추가하는 함수
+        // ✅ 공통 헬퍼: 지정 슬롯에 '닫기 ✕' 버튼을 추가하는 함수
         // ---------------------------------------------------
         // - 현재는 HOME 상단 TC_billboard_leaderboard에서만 사용됩니다.
         // - 동작 개요:
@@ -368,7 +420,7 @@
             const closeBtn = document.createElement('button');
             closeBtn.className = 'mk-ad-close-button';
             closeBtn.type = 'button';
-            closeBtn.textContent = '닫기 X';
+            closeBtn.textContent = '닫기 ✕';
 
             closeBtn.addEventListener('click', function () {
                 // [중요] 클릭 시 광고 영역을 완전히 접기
@@ -421,7 +473,7 @@
         //       - 홈 상단 핵심 영역으로, 디자인/브랜딩 상 별도 'Advertisement' 라벨 없이
         //         페이지 구조 및 크리에이티브 레벨에서 광고임을 인지하도록 설계합니다.
         //       - 대신, 광고가 실제로 로드된 경우에만 사용자가 직접 닫을 수 있는
-        //         '닫기 X' 버튼(.mk-ad-close-button)을 우측 상단에 노출합니다.
+        //         '닫기 ✕' 버튼(.mk-ad-close-button)을 우측 상단에 노출합니다.
         //
         // - 정리:
         //   - 대부분의 슬롯: "광고가 있을 때만 Advertisement 라벨" 패턴 유지
@@ -442,7 +494,7 @@
             if (!outerSlot) return;
 
             // 🟡 [예외 1] 홈 상단 'TC_billboard_leaderboard'
-            //   - 라벨은 붙이지 않고, 광고가 성공적으로 로드된 경우에만 '닫기 X' 버튼 추가
+            //   - 라벨은 붙이지 않고, 광고가 성공적으로 로드된 경우에만 '닫기 ✕' 버튼 추가
             if (slotId === 'TC_billboard_leaderboard') {
                 addCloseButtonForSlot(outerSlot, slotId);
                 console.log('ℹ️ [Ad Label] TC_billboard_leaderboard: label skipped, close button added.');
@@ -607,11 +659,11 @@
              */
 
             // 0-1. 가로형 배너용 사이즈 매핑 (TC, MC)
-                const sizeMapping_horizontal = googletag.sizeMapping()
-                    .addSize([1024, 0], [[1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180], [728, 90], [2, 1], [1, 1], 'fluid'])
-                    .addSize([768, 0], [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [300, 250], [2, 1], [1, 1], 'fluid'])
-                    .addSize([0, 0], [[336, 280], [300, 250], [320, 480], [320, 100], [320, 50], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'])
-                    .build();
+            const sizeMapping_horizontal = googletag.sizeMapping()
+                .addSize([1024, 0], [[1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180], [728, 90], [2, 1], [1, 1], 'fluid'])
+                .addSize([768, 0], [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [300, 250], [2, 1], [1, 1], 'fluid'])
+                .addSize([0, 0], [[336, 280], [300, 250], [320, 480], [320, 100], [320, 50], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'])
+                .build();
 
             // 0-2. 우측 박스형 배너용 사이즈 매핑 (MR)
             const sizeMapping_right_square = googletag.sizeMapping()
@@ -735,7 +787,7 @@
                      *
                      * [추가 참고 · 닫기 버튼 연동]
                      * - 광고가 성공적으로 로드되면(slotRenderEnded, event.isEmpty === false),
-                     *   상단 addAdLabel 함수 내부에서 TC 전용 '닫기 X' 버튼이 생성됩니다.
+                     *   상단 addAdLabel 함수 내부에서 TC 전용 '닫기 ✕' 버튼이 생성됩니다.
                      * - 사용자가 닫기 버튼을 클릭하면, 해당 .ad-slot이 display:none 처리되어
                      *   상단 광고 영역이 완전히 사라집니다.
                      */
