--- a/HOME.html
+++ b/HOME.html
@@ -193,7 +193,9 @@
          * - TC_billboard_leaderboard와 같이 페이지 상단 핵심 인벤토리에서
          *   사용자가 직접 광고를 접을 수 있도록 제공하는 "닫기 ✕" 버튼입니다.
          *
-         * - 이 스타일은 Jaeyeon이 정의한 Design Token을 반영합니다.
+         * - 이 스타일은 Jaeyeon이 정의한 Design Token을 반영하되,
+         *   전체적으로는 HOME/Section/List 레이아웃과 자연스럽게 어울리는
+         *   "살짝 둥근 직사각형" 형태로 조정했습니다.
          *
          *   1) Layout & Position
          *      - 배너(= .ad-slot)를 기준으로 우측 상단 절대 위치 (top: 10px, right: 10px)
@@ -206,7 +208,8 @@
          *      - letter-spacing: -0.3px (단단하고 조밀한 느낌)
          *
          *   3) Shape & Border
-         *      - border-radius: 99px → 완전한 Pill(알약) 형태
+         *      - border-radius: 8px → 과한 Pill(완전 타원형)이 아니라
+         *        뉴스/비즈니스 사이트 UI에 자연스러운 "살짝 둥근 직사각형 버튼" 형태
          *      - padding: 5px 12px → 14px 폰트 기준으로 균형 잡힌 여백
          *      - border: 1px solid rgba(255,255,255,0.8)
          *        → 과하지 않은 은은한 흰색 테두리
@@ -237,7 +240,7 @@
             justify-content: center;
 
             padding: 5px 12px;         /* 상하 5px, 좌우 12px */
-            border-radius: 99px;       /* 완전한 Pill Shape */
+            border-radius: 8px;        /* ✅ Pill(99px) 대신 자연스러운 직사각형 라운드 */
             border: 1px solid rgba(255, 255, 255, 0.8);
 
             background: rgba(0, 0, 0, 0.15); /* 거의 투명한 어두운 배경 */
