--- a/HOME.html
+++ b/HOME.html
@@ -211,11 +211,12 @@
          *      - border-radius: 8px → 과한 Pill(완전 타원형)이 아니라
          *        뉴스/비즈니스 사이트 UI에 자연스러운 "살짝 둥근 직사각형 버튼" 형태
          *      - padding: 5px 12px → 14px 폰트 기준으로 균형 잡힌 여백
-         *      - border: 1px solid rgba(255,255,255,0.8)
-         *        → 과하지 않은 은은한 흰색 테두리
+         *      - **border는 제거하고**, box-shadow / text-shadow 기반으로 윤곽을 잡아
+         *        보다 미니멀하면서도 플로팅(overlay) 느낌을 강화했습니다.
          *
          *   4) Color & Visibility
-         *      - background: rgba(0,0,0,0.15) (거의 투명한 어두운 배경)
+         *      - background: rgba(0,0,0,0.2) (이전 0.15보다 살짝 강화)
+         *        → 밝은 배너 위에서도 버튼 배경이 적당히 잡히도록 조정
          *      - color: #FFFFFF
          *      - text-shadow + box-shadow 를 강하게 적용하여
          *        흰색/밝은 계열 이미지 위에서도 버튼 윤곽과 텍스트가 절대 묻히지 않도록 설계
@@ -240,10 +241,10 @@
             justify-content: center;
 
             padding: 5px 12px;         /* 상하 5px, 좌우 12px */
-            border-radius: 8px;        /* ✅ Pill(99px) 대신 자연스러운 직사각형 라운드 */
-            border: 1px solid rgba(255, 255, 255, 0.8);
+            border-radius: 8px;        /* 자연스러운 직사각형 라운드 */
+            border: none;              /* ✅ 테두리 제거, shadow 기반 윤곽 */
 
-            background: rgba(0, 0, 0, 0.15); /* 거의 투명한 어두운 배경 */
+            background: rgba(0, 0, 0, 0.2); /* ✅ 살짝 강화된 반투명 어두운 배경 */
             color: #ffffff;
             font-size: 14px;           /* Design Token: 14px */
             font-weight: 500;          /* Regular~Medium */
@@ -305,15 +306,14 @@
             /*
              * [Dark Mode · mk-ad-close-button]
              * - 다크 모드에서도 지나치게 떠 보이지 않도록
-             *   border / background 농도만 살짝 조정합니다.
+             *   배경 농도만 살짝 조정합니다.
              * - 기본 전략(흰색 텍스트 + 어두운 그림자)은 동일하게 유지합니다.
              */
             .mk-ad-close-button {
-                background: rgba(0, 0, 0, 0.2);
-                border-color: rgba(255, 255, 255, 0.75);
+                background: rgba(0, 0, 0, 0.35); /* 라이트 모드보다 약간 더 진하게 */
             }
             .mk-ad-close-button:hover {
-                background: rgba(0, 0, 0, 0.4);
+                background: rgba(0, 0, 0, 0.5);
             }
         }
 
