--- a/HOME.html
+++ b/HOME.html
@@ -193,38 +193,33 @@
          * - TC_billboard_leaderboard와 같이 페이지 상단 핵심 인벤토리에서
          *   사용자가 직접 광고를 접을 수 있도록 제공하는 "닫기 ✕" 버튼입니다.
          *
-         * - 이 스타일은 Jaeyeon이 정의한 Design Token을 반영하되,
-         *   전체적으로는 HOME/Section/List 레이아웃과 자연스럽게 어울리는
-         *   "살짝 둥근 직사각형" 형태로 조정했습니다.
+         * - 이번 버전은 좀 더 **심플하고 뉴스 사이트 톤에 맞는 플랫 스타일**에 초점을 맞추었습니다.
          *
          *   1) Layout & Position
-         *      - 배너(= .ad-slot)를 기준으로 우측 상단 절대 위치 (top: 10px, right: 10px)
+         *      - 배너(= .ad-slot)를 기준으로 우측 상단 절대 위치
+         *        → top: 15px, right: 10px
          *      - 텍스트 정렬을 위해 inline-flex + align-items/justify-content 사용
          *
          *   2) Typography
          *      - 텍스트: "닫기 ✕"
          *      - font-size: 14px (모바일 터치 및 가독성 고려)
          *      - font-weight: 500 (Regular~Medium 느낌)
-         *      - letter-spacing: -0.3px (단단하고 조밀한 느낌)
+         *      - letter-spacing: -0.3px (조밀하고 단단한 인상)
          *
-         *   3) Shape & Border
-         *      - border-radius: 8px → 과한 Pill(완전 타원형)이 아니라
-         *        뉴스/비즈니스 사이트 UI에 자연스러운 "살짝 둥근 직사각형 버튼" 형태
-         *      - padding: 5px 12px → 14px 폰트 기준으로 균형 잡힌 여백
-         *      - **border는 제거하고**, box-shadow / text-shadow 기반으로 윤곽을 잡아
-         *        보다 미니멀하면서도 플로팅(overlay) 느낌을 강화했습니다.
+         *   3) Shape & Spacing
+         *      - border-radius: 0px → 완전히 각진 직사각형 버튼 (심플한 느낌)
+         *      - padding: 5px 5px → 텍스트 주변 최소 여백, 과도한 장식 없이 기능 위주 버튼
          *
          *   4) Color & Visibility
-         *      - background: rgba(0,0,0,0.2) (이전 0.15보다 살짝 강화)
-         *        → 밝은 배너 위에서도 버튼 배경이 적당히 잡히도록 조정
+         *      - background: rgba(0,0,0,0.2)
+         *        → 흰색/밝은 배너 위에서 버튼 배경이 적당히 잡히도록 조정
          *      - color: #FFFFFF
-         *      - text-shadow + box-shadow 를 강하게 적용하여
-         *        흰색/밝은 계열 이미지 위에서도 버튼 윤곽과 텍스트가 절대 묻히지 않도록 설계
-         *        (유튜브/인스타 오버레이 버튼과 유사한 전략)
+         *      - text-shadow + box-shadow를 사용해
+         *        밝은 이미지 위에서도 텍스트와 버튼 윤곽이 묻히지 않도록 처리
          *
          *   5) Interaction
-         *      - :hover 시 background를 rgba(0,0,0,0.3) 정도로 살짝 어둡게
-         *      - box-shadow를 조금 더 진하게, transform으로 1px 정도 위로 띄워 클릭감을 강화
+         *      - :hover 시 background를 rgba(0,0,0,0.3)로 살짝 어둡게,
+         *        box-shadow를 조금 강화하고 약간 위로 띄워 클릭감을 전달
          *
          * - 주의사항:
          *   - z-index를 120으로 설정하여 mk-ad-label(100)보다 항상 위에 위치시킵니다.
@@ -233,21 +228,21 @@
          */
         .mk-ad-close-button {
             position: absolute;
-            top: 10px;                 /* Design Token: top 10px */
-            right: 10px;               /* Design Token: right 10px */
+            top: 15px;                /* ✅ Design: 좀 더 내려 심리적 여백 확보 */
+            right: 10px;
 
             display: inline-flex;      /* 텍스트 정렬용 */
             align-items: center;
             justify-content: center;
 
-            padding: 5px 12px;         /* 상하 5px, 좌우 12px */
-            border-radius: 8px;        /* 자연스러운 직사각형 라운드 */
-            border: none;              /* ✅ 테두리 제거, shadow 기반 윤곽 */
+            padding: 5px 5px;          /* ✅ 요청: 상하/좌우 5px */
+            border-radius: 0px;        /* ✅ 각진 사각형 (라운드 제거) */
+            border: none;              /* 테두리 없이 심플하게 */
 
-            background: rgba(0, 0, 0, 0.2); /* ✅ 살짝 강화된 반투명 어두운 배경 */
+            background: rgba(0, 0, 0, 0.2);
             color: #ffffff;
-            font-size: 14px;           /* Design Token: 14px */
-            font-weight: 500;          /* Regular~Medium */
+            font-size: 14px;
+            font-weight: 500;
             letter-spacing: -0.3px;
             line-height: 1.3;
 
@@ -310,7 +305,7 @@
              * - 기본 전략(흰색 텍스트 + 어두운 그림자)은 동일하게 유지합니다.
              */
             .mk-ad-close-button {
-                background: rgba(0, 0, 0, 0.35); /* 라이트 모드보다 약간 더 진하게 */
+                background: rgba(0, 0, 0, 0.35);
             }
             .mk-ad-close-button:hover {
                 background: rgba(0, 0, 0, 0.5);
