--- a/section.html
+++ b/section.html
@@ -194,10 +194,9 @@
              *   나중에 defineSizeMapping(sizeMapping)으로 슬롯에 적용합니다.
              *
              * - Section GPT에서는:
-             *   - sizeMapping_horizontal   : 상단 TC 빌보드(가로형)용
-             *   - sizeMapping_right_square : 우측 MR 박스형(하프페이지 등)용
-             * - View, HOME, List GPT 파일과 가능한 한 동일한 사이즈 세트를 사용하여
-             *   인벤토리/캠페인 운영을 통일했습니다.
+             *   - sizeMapping_horizontal     : 상단 TC 빌보드(가로형)용
+             *   - sizeMapping_siderail_square: 우측 MR 박스형(하프페이지 등)용
+             * - HOME / LIST GPT와 동일한 사이즈 세트를 사용해 인벤토리/캠페인 운영을 통일합니다.
              */
 
             // 0-1. 가로형 배너를 위한 사이즈 매핑 (TC 적용)
@@ -237,39 +236,31 @@
                 )
                 .build();
 
-            // 0-2. 우측 박스형 배너를 위한 사이즈 매핑 (MR 적용)
-            const sizeMapping_right_square = googletag.sizeMapping()
-                .addSize(
-                    [1024, 0],
-                    [
-                        [300, 600], [300, 250],
-                        [250, 250], [200, 200],
-                        [2, 1], [1, 1],
-                        'fluid'
-                    ]
-                )
-                .addSize(
-                    [768, 0],
-                    [
-                        [480, 320],
-                        [336, 280],
-                        [320, 100], [320, 50],
-                        [300, 250], [250, 250], [200, 200],
-                        [2, 1], [1, 1],
-                        'fluid'
-                    ]
-                )
-                .addSize(
-                    [0, 0],
-                    [
-                        [336, 280],
-                        [320, 480],
-                        [320, 100], [320, 50],
-                        [300, 250], [250, 250], [200, 200],
-                        [2, 1], [1, 1],
-                        'fluid'
-                    ]
-                )
+            // 0-2. 우측 사이드레일 박스형 배너용 사이즈 매핑 (MR 적용)
+            /*
+             * [변경 · sizeMapping_siderail_square 도입]
+             * - 기존 sizeMapping_right_square를 HOME GPT와 동일한 정책의
+             *   sizeMapping_siderail_square로 교체했습니다.
+             * - 데스크탑 구간([1024,0])에 336x280을 최우선 사이즈로 추가하여,
+             *   사이드바 폭 336px 컨테이너와 자연스럽게 매칭됩니다.
+             */
+            const sizeMapping_siderail_square = googletag.sizeMapping()
+                .addSize([1024, 0], [
+                    [336, 280], [300, 600], [300, 250], [250, 250], [200, 200],
+                    [2, 1], [1, 1], 'fluid'
+                ])
+                .addSize([768, 0], [
+                    [480, 320], [336, 280],
+                    [320, 100], [320, 50],
+                    [300, 250], [250, 250], [200, 200],
+                    [2, 1], [1, 1], 'fluid'
+                ])
+                .addSize([0, 0], [
+                    [336, 280], [320, 480],
+                    [320, 100], [320, 50],
+                    [300, 250], [250, 250], [200, 200],
+                    [2, 1], [1, 1], 'fluid'
+                ])
                 .build();
 
 
@@ -309,7 +300,7 @@
                 .addService(googletag.pubads());
 
 
-            // 5-2. MR_halfpage_rectangle (Lazy Load) - sizeMapping_right_square 적용
+            // 5-2. MR_halfpage_rectangle (Lazy Load) - sizeMapping_siderail_square 적용
             MR_halfpage_rectangle_slot = googletag.defineSlot(
                 AdUnitPath,
                 [
@@ -324,7 +315,7 @@
                 ],
                 'MR_halfpage_rectangle' // Slot ID는 MR_halfpage_rectangle 유지
             )
-                .defineSizeMapping(sizeMapping_right_square) 
+                .defineSizeMapping(sizeMapping_siderail_square) 
                 .setTargeting('div_id', 'MR_halfpage_rectangle')
                 .setTargeting('position', 'MR')
                 .setTargeting('ad_area_type', 'ATF')       // 우측 상단 레일(ATF 성격)
@@ -383,9 +374,20 @@
          *   구조 및 광고 영역의 일관성을 유지합니다.
          * - 광고와 직접 연관되지 않는 스타일은 최소한의 설명만 남겨 두었습니다.
          */
+
         body { font-family: 'Malgun Gothic', 'Dotum', Arial, sans-serif; margin: 0; padding: 0; background-color: #f6f6f6; color: #333; }
         a { text-decoration: none; color: inherit; }
-        .container { max-width: 1210px; margin: 0 auto; padding: 0 10px; }
+
+        /*
+         * [변경 · 컨테이너 폭 정책]
+         * - max-width: 1210px → 1246px로 확대
+         *   · 사이드바 폭을 300px → 336px로 확장하면서도,
+         *     메인 콘텐츠 최소 폭(약 870px 수준)은 기존과 동일하게 유지되도록 맞춘 값입니다.
+         *   · HOME GPT와 동일한 1246px 컨테이너 폭을 사용하여,
+         *     상단/섹션/리스트 페이지 간 레이아웃 느낌을 통일했습니다.
+         */
+        .container { max-width: 1246px; margin: 0 auto; padding: 0 10px; }
+
         header { width: 100%; background-color: #fff; border-bottom: 1px solid #ddd; padding: 10px 0; text-align: center; }
         .logo { font-size: 28px; font-weight: bold; color: #000; }
         nav { background-color: #f9f9f9; border-bottom: 2px solid #333; margin-bottom: 20px; }
@@ -399,22 +401,17 @@
          * [레이아웃 · 메인/우측 컬럼 비율 전략 – HOME/VIEW와 동일 방향]
          *
          * - 목표:
-         *   1) 데스크탑에서 우측 사이드바 내 300px 폭 광고(300x250, 300x600 등)가
-         *      잘리지 않고 온전히 노출되도록 "사이드바 영역 폭"을 보장
+         *   1) 데스크탑에서 우측 사이드바 내 박스형/세로형 광고가 안정적으로 노출되도록,
+         *      컨테이너 폭을 고정(336px)으로 확보
          *   2) 모바일/태블릿에서는 우측 컬럼이 메인 아래로 내려가며 폭 100% 사용
          *
          * - 전략:
          *   - .main-content : flex: 1 1 auto; → 남는 영역을 유연하게 차지
-         *   - .sidebar      : 
-         *       · 데스크탑(≥1025px): flex: 0 0 300px; min-width: 300px
-         *          → padding 0 기준으로 레일 전체 폭을 300px 확보
-         *            (300x600 / 300x250 소재가 거의 딱 맞게 들어가는 폭)
+         *   - .sidebar      :
+         *       · 데스크탑(≥1025px): flex: 0 0 336px; min-width/max-width: 336px
+         *          → HOME GPT와 동일한 사이드레일 폭 정책
          *       · 모바일/태블릿(≤1024px): width:100%; flex:1 1 auto; min-width:0
          *          → 폭 100%를 사용하며, min-width 제약 제거
-         *
-         * - 결과:
-         *   - 데스크탑에서는 우측 레일에서 300px 폭 소재를 기준으로 안정적으로 수용
-         *   - 모바일/태블릿에서는 HOME/VIEW와 동일하게, 우측 컬럼이 본문 아래로 내려가는 구조
          */
         .main-content {
             flex: 1 1 auto;
@@ -424,10 +421,10 @@
         .sidebar {
             /* 
              * [사이드바 공통 스타일]
-             * - 외곽 컨테이너에는 padding을 두지 않고, 폭만 300px 기준으로 확보합니다.
+             * - 외곽 컨테이너에는 padding을 두지 않고, 폭만 사이드레일 정책에 맞춰 확보합니다.
              * - 텍스트/콘텐츠 여백은 .sidebar-box 등 내부 요소에서 padding으로 제어합니다.
              * - 광고 슬롯(.ad-slot)은 사이드바 폭을 그대로 활용하여,
-             *   300x600 / 300x250 등의 소재가 자연스럽게 노출되도록 합니다.
+             *   336x280 / 300x600 / 300x250 등의 소재가 자연스럽게 노출되도록 합니다.
              */
             background-color: #fff;
             padding: 0;                 /* 🔧 외곽 컨테이너는 padding 0 유지 */
@@ -615,13 +612,14 @@
 
         /* ------------------------------
            데스크탑 레이아웃 (>= 1025px)
-           - 우측 사이드바 컨테이너 폭 300px 확보 (padding 0 기준)
-           - 300x600/300x250 등 세로형 광고가 기준 폭 300px 안에서 노출
+           - 우측 사이드바 컨테이너 폭 336px 확보 (padding 0 기준)
+           - 336x280 / 300x600 / 300x250 등 세로형 광고가 기준 폭 336px 안에서 노출
         ------------------------------ */
         @media (min-width: 1025px) {
             .sidebar {
-                flex: 0 0 300px;
-                min-width: 300px;
+                flex: 0 0 336px;   /* 🔧 HOME GPT와 동일: 고정 폭 336px */
+                min-width: 336px;
+                max-width: 336px;  /* 필요시 최대 폭도 336px로 고정 → 우측 레일 일관성 확보 */
             }
         }
         
@@ -767,6 +765,8 @@
                     - Section 프론트 우측 레일에 위치한 MR 인벤토리로, Lazy Load 대상으로 설정되어 있습니다.
                     - JS 하단 IntersectionObserver에서, 스크롤로 인해 뷰포트 근처에 도달했을 때
                       display() + refresh()를 호출하여 실제로 광고 요청이 발생합니다.
+                    - 데스크탑에서는 사이드바 컨테이너 폭(336px)을 기준으로,
+                      336x280 / 300x600 / 300x250 등 다양한 사이즈를 수용합니다.
                 -->
                 <div id="MR_halfpage_rectangle" class="ad-slot ad-2-mr">
                     
